Personalized me-page

--- a/content/redovisning/01_kmom01.md
+++ b/content/redovisning/01_kmom01.md
@@ -3,4 +3,17 @@
 Redovisning kmom01
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/01_kmom01.md`.
+Nu har det ju snart gått ett år sedan jag började på detta program. Det känns som vi hunnit med en hel del olika programmeringsspråk och sätt att programmera på redan. Innan jag började på detta program hade jag lite koll på objektorienterad programmering via Java och utöver det så läste vi ju även en kurs om objektorienterad python tidigare i år. Personligen tycker jag att objektorienterad programmering känns väldigt bra. Det finns ju vissa nackdelar som att det i vissa fall kräver att man skriver lite extra kod bara för att få sina program att fungera baserat på objekt, men samtidigt tycker jag att det blir mycket tydligare vad programmet gör och vad den som skrivit programmet försöker åstadkomma. Att relatera till objekt och dess egenskaper (attribut) känns även som ett väldigt naturligt sätt att tänka på och det i sig tror jag gör det enklare för fler människor att relatera till kod som är skriven på ett objektorienterat sätt.
+
+Det kändes väldigt naturligt att komma in i objektorienterad programmering i PHP. Med tanke på att jag precis gjort klart den objektorienterade python kursen så ligger själva objekttänket väldigt färskt i tankarna. PHP tycker jag har löst själva syntaxen för objektorientering på ett enkelt och intuitivt sätt vilket också gjorde att det var enkelt att komma in i kodandet och förstå vad jag behövde göra både för att få till objekten och klasserna och att få dem att fungera tillsammans.
+
+Gissa numret övningen var lite klurig men det gick bra att komma igång tack vare bra genomgång i de videos som Mikael hade gjort. Det var lite klurigt att få ihop allt eftersom det nu börjar vara flera element som skall fungera tillsammas, t.ex. formulär, processidor och sessioner. Men samtidigt kändes det väldigt kul att det mesta flöt på väldigt bra och det kändes som att flera av momenten i övningen är saker jag lärt mig i tidigare kurser och att jag faktiskt kom ihåg hur det var man skulle göra, dvs jag tror jag lärt mig något... Jag började med att göra uppgiften som Mikael hade gjort den sedan delade jag upp koden mer och introducerade sessionshantering. Sessionshanteringen krävde en hel del testande, först började jag med att bara spara vissa attribut men insåg fort att jag även behövde spara hela objektet om jag inte ville återskapa nya objekt baserat på sessionsdatan. Så det slutade med att jag sparade hela objektet i sessionen och sedan hämtade data från objektet när jag behövde det i koden. 
+
+Att använda processidan för POST formuläret gjorde det ännu lite klurigare, men när jag väl fått till det kändes det väldigt bra att använda processidan. Jag blir själv irriterad på sidor som klagar på när man laddar om sidan och den frågar ifall man vill skicka om POST data. Det känns därför bra att ha koll på hur jag kan undvika det i mina egna webbsidor framöver på ett smidigt sätt.    
+
+Jag klagade rätt mycket på Anax ramverket när vi gjorde designkursen. Men nu när jag satte upp allt igen så gick det väldigt smidigt denna gång. Det går ju fort när man har ett ramverk att utgå ifrån och det tar väldigt kort tid för att få upp något standardiserat på banan. Ska bli intressant att se ifall jag tycker även designdelen fungerar bättre i ramverket denna gång eller om jag fortfarande uppfattar det som krångligt när jag testar att ändra saker. Fick inte tid över att ändra designen så mycket i detta kursmoment, men hoppas på att få lite tid över till det senare i kursen.
+
+Även Git och GitHub kom rätt naturligt eftersom vi använde det i designkursen. Än så länge har jag bara använt Git för det vi gjort inom våra kurser, men hoppas få till så jag kan använda Git "på riktigt" i något annat projekt jag tänkt starta innan sommaren.
+
+TIL denna gång var främst den objektorienterade syntaxen för PHP, det är något jag inte använt förut men kändes samtidigt väldigt naturligt och lätt att sätta mig in i. 
+
