--- a/content/redovisning/02_kmom02.md
+++ b/content/redovisning/02_kmom02.md
@@ -3,4 +3,14 @@
 Redovisning kmom02
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/02_kmom02.md`.
+Personligen ser jag UML och phpDocumentor som två olika saker, men i princip skulle de ju även kunna användas på liknande sätt. I min erfarenhet skapar UML (i relation till mjukvaruutveckling) oftast mer jobb än vad det underlättar. Det sagt så finns det ju fördelar med att modulera ett program med t.ex. UML för att skapa en förståelse för vad programmet kan utföra. Samt även ge utvecklare som fortsätter att utveckla programmet vid ett senare tillfälle en bra översikt på vad de kan förvänta sig av programmet och t.ex. hur de kan interagera mot programmet. UML har ju fördelen att det relativt snabbt går att skapa en översikt av ett programs klassar och funktioner. Dock känner jag inte till något verktyg för att översätta UML till kod eller läsa av kod för att generera UML. Det gör ju processen att skapa och framförallt hålla UML dokumentationen uppdaterad till en utmaning.
+
+Fördelen med ett program som phpDocumentor är ju att det genererar documentationen dynamiskt vilket sparar väldigt mycket arbete. Dock genereras ju documentationen baserat på vad utvecklare har documenterat snarare än vilken kod de faktiskt har skrivit. Hade phpDocumentor genererat documentation baserat på den faktiska koden hade det varit riktigt imponerande. 
+
+Därav ser jag det lite mer som att UML är något man kan välja att använda i början och under en utvecklingsansatsning medans phpDocumentor är något som ger mest nytta när man är klar med en utveckling. För att ge användare och utvecklare som vill ta koden vidare en bättre insikt i vad det är ett program kan göra. 
+
+För min del gick det relativ enkelt att föra över “Gissa mitt nummer” spelet till me-sidan. Det var en del kod som behövdes skrivas om men det var mest pga att jag gick från att använda en process-sida för mitt POST formulär till att dela upp flödet i routes istället. Jag gillar uppdelningen att strukturen i ramverkat i relation till routes, src och views. Det känns väldigt modulärt och kraftfullt att arbeta med. 
+
+Det stora fördelen med att skriva kod i ramverket är att man har mycket gjort redan och kan utnyttja redan existerande metoder och klasser för att få saker att fungera på ett snabbt och enkelt sätt. Nackdelarna känner jag i dagsläget är att man behöver lära sig hur ramverket fungerar för att förstå hur man skall kunna uppnå det man vill, så det finns en viss inlärningskurva. Sedan känns det som man även bygger in sig lite i det sätt som ramverket förutsätter att saker skall göras. Dvs om man vid ett senare tillfälle vill eller behöver använda ett annat ramverk av någon anledning så kan det ju bli att man behöver skriva om en massa kod pga av att ramverken fungerar på helt olika sätt.
+
+I detta kmom var phpDocumentor något helt nytt för mig och ett intressant sätt att dokumentera ett program på. Jag är dock förundrad över att det fortfarande inte verkar finnas något verktyg som utgår mer från själva koden som vi genererar. Jag upplever största problemet att få till dokumentation är att utvecklare inte vill dokumentera. Även fast phpDocumentor underlättare genereringen av dokumentation så behöver ju fortfarande utvecklaren till programmet dokumentera sina klasser och funktioner för att det skall fungera.
