Added dicegame100 and finalized kmom03

--- a/content/redovisning/03_kmom03.md
+++ b/content/redovisning/03_kmom03.md
@@ -3,4 +3,24 @@
 Redovisning kmom03
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/03_kmom03.md`.
+Den erfarenhet jag har av att skriva tester för kod är den jag fått via kurser i detta program. Så det var inte första gången jag skrev enhetstester men det är fortfarande väldigt nytt för mig. Att skriva tester för sin kod tror jag väldigt mycket på och jag tror det är ytterst viktigt och även lärorikt. Varje gång jag skriver tester får jag ofta sitta och klura ett tag på både vad det är jag vill testa och hur jag verkligen testar vettiga saker. Detta gör att jag ser på min kod på ett annat sätt som jag tror även gör att jag skriver bättre kod, det blir som en loop mellan att skriva kod, testa den och förstå hur jag kan förbättra koden och sedan skriva nya tester för koden.
+
+## Testning
+White-box testing är när man har tillgång till källkoden för ett program och kan skapa test där man vet hur funktionerna inuti programmet fungerar. Man har även koll på vilka variabler som är tanken att både skickas in och returneras och hur funktionerna arbetar med data som man skickar in. Detta gör att man kan testa väldigt grundligt hur programmet fungerar och säkerställa att programmet t.ex. returnerar den data som det är tänkt baserat på vilken data man skickar in i programmet.
+
+Black-box testing är när man inte känner till källkoden till ett program och primärt testar funktionaliteten hos ett program. Testen är då oftast baserade på testcase där man vet vad som bör komma ut ur ett program baserat på vad man skickar in, men man vet inte hur data behandlas inuti programmet. Därför blir det oftast mest tester som helt enkelt verifierar just att förväntat resultat uppnåtts efter att man skickat in data i programmet.
+
+Grey-box testing är något emellan white-box och black-box testing. Man har då oftast tillgång till källkoden men man kanske fortfarande är mest intresserad av att testa just funktionaliteten i ett program. Detta för att t.ex. säkerställa att en användare av programmet får den återkoppling av programmet som användaren förväntar sig.
+
+Positiva tester är när man t.ex. skickar in en viss data i ett program och sedan verifierar att man t.ex. får tillbaka det data som man förväntade sig. T.ex. om jag kastar en tärning med sex sidor med värden mellan 1-6 så förväntar jag mig att den tärningen har en siffra mellan 1-6 efter ett kast.
+
+Negativa tester däremot försöker “förstöra” programmet, detta för att säkerställa att programmet fungerar även fast en användare råkar göra fel. Säg att du kan skapa olika tärningar i ett program, men de behöver alla ha positiva värden annars skulle programmet du byggt gå sönder. Då kan man testa att skapa en tärning med negativt värde och säkerställa att programmet kan hantera den felaktiga situationen på ett bra sätt.
+
+## Tärningsspel
+Tärningsspelet gick förhållandevis bra att göra, dock tog det en väldigt lång tid för mig att få till allt. Jag hade först tänkt göra en egen spelklass som hanterade logiken, dock p.g.a. tidsbrist så blev det att jag implementerade spelet med klasserna vi redan hade (dvs DiceHand, Dice och DiceGraphic) och sedan gjorde jag en del logik i routesen. Jag försökte dock vara noga med att inte lägga in logik i vyer eller låta vyer prata med sessionen utan sköter allt sånt i routsen och försökte hålla dem någorlunda små. Jag gillar konceptet med routes och att jobba med klasser, det känns väldigt dynamiskt. Trots att jag inte gjorde en spelklass så förstår jag att det hade varit önskvärt, men tolkade det inte som ett krav så hoppas att det är ok. Såg att vi skall jobba vidare på spelet i nästa kursmoment så hoppas hinna göra en spelklass där.
+
+Jag lyckades få 100% kodtäckning av alla mina klasser. När jag väl kommit igång med testklasser så var det ganska lätt att täcka all kod. Dock blev det ju tydligt att även fast jag täcker all kod betyder ju inte det att testerna behöver vara vettiga. Som jag nämnde ovan så tycker jag att jag lär mig mycket på att testa koden för jag ser då hur jag skulle kunna göra koden mycket bättre och få ett bättre flöde mellan funktionerna.
+
+TIL detta kursmoment var nog primärt att jobba med enhetstester i PHP. Generellt gillar jag att test kod så det kändes väldigt bra att lära mig.
+
+Dock hade jag jättestora problem att komma igång, det tog mig en hel dag att installera Xdebug. Det kändes som jag pajade något i min PHP installation när jag gjorde det så har inte vågat starta om datorn under hela kursmomentet. Skall göra det efter jag skickat in detta och se ifall jag kommer kunna arbeta vidare med kmom04 eller behöver installera om allt… Jag börjar gilla PHP mer och mer när jag programmerar med det. Tyvärr är det helt klart i PHP kurserna som jag upplever mest problem med själva “infrastrukturen” runt omkring själva kodandet. Det var likadant i designkursen, det lämnar ju tyvärr en väldigt bitter eftersmak och får mig mer och mer att inte vilja jobba med PHP. Det sagt så är det ju bra att kunna om man måste jobba med det i framtiden av någon anledning.
