Added movie database to redovisa

--- a/content/redovisning/05_kmom05.md
+++ b/content/redovisning/05_kmom05.md
@@ -3,4 +3,13 @@
 Redovisning kmom05
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/05_kmom05.md`.
+Spontant tyckte jag koden till övningen för PHP PDO och MySQL var välstrukturerad och tydlig. Det var smart att endast ha en enda vy för att rita upp tabellen som sedan gick att återanvända i alla scenarios där man ville visa filmerna i en tabell. Jag noterade att det var vissa saker som inte var helt implementerade, t.ex. "reset" knappen i vyn för att skapa en ny film i databasen och även länkarna för paginering kunde inte helt hantera alla situationer som en användare kunde trycka sig till via länkarna. Annars tyckte jag koden var ett bra intro för att förstå hur det går att göra. Tyckte även det var snyggt med en index sida och en "case" sats, dvs om man bortser ifrån att det blev väldigt mycket kod på ett ställe.
+
+Att föra över koden till ramverket gick först helt åt skogen. Både videoserien till uppgiften och texten på sidan om uppgiften verkade referera till hur man jobbar i en tidigare version av ramverket, vilket gjorde mig mer förvirrad än hjälpte. Men när jag väl kom fram till det och istället fokuserade på kmom04 och hur man fick en controller att fungera så gick det bättre. Efter några gupp i vägen lyckades jag få igång min kontroller och började föra över koden. Det mesta gick smidigt och de största skillnaderna upplevde jag blev att hantera POST och GET lite annorlunda än i exemplet, dvs istället för att slå ihop dem delade jag upp dem i olika controller actions. Jag hade lite problem att förstå hur ramverket använde POST och GET variabler, men efter att försökt förstå dokumentationen och gjort lite kvalificerade gissningar fick jag även det att fungera. 
+
+Databasmodulen till anax fungerade smidigt. Det var ju samma funktioner som i övningen så det var lätt att förstå, jag använde någon annan funktion utöver de som användes i övningen men de var bra dokumenterade på github så det var enkelt att förstå hur jag skulle göra. Spontant tycker jag moduler likt denna är bra, det gör det ju enklare att arbeta mot en databas när man har en form av abstraktion som kan underlätta när man skriver sin egen kod och det går snabbare att komma igång. Som vanligt så är det ju dock en liten inlärningskurva i början när man använder någon annans kod, men i detta fall tyckte jag det var mycket enklare att komma in i och förstå i relation till andra moduler inom Anax.
+
+Jag hade velat göra alla extrauppgifter till uppgiften men pga tidsbrist valde jag att fokuera på två, först och främst att få till all kod i en controller och sedan att även lägga till en reset funktion. Det verkar vara en hel del som tycker det är roligt att gå in och testa andras lösningar på studentservern så jag kände att det var lika bra att göra en reset funktion direkt ifall någon går in och testar lite väl friskt med informationen i databasen. Utöver de två sakerna försökte jag göra en relativt enkel controller. 
+Jag gillade sättet som övningen slog ihop vyn där användaren kan både skapa en ny film, uppdatera en existerande film och ta bort en film, så jag replikerade den funktionaliteten i min lösning, skillnaden som jag nämnde ovan blev dock att jag bröt ut GET och POST funktionerna i separate controller funktioner.
+
+TIL denna gång var primärt att jobba med anax databas modul inklusive GET och POST variablerna i ramverket.   
