Updated redovisa text for kmom06

--- a/content/redovisning/06_kmom06.md
+++ b/content/redovisning/06_kmom06.md
@@ -3,4 +3,20 @@
 Redovisning kmom06
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/06_kmom06.md`.
+Det gick väldigt bra att jobba med klassen för filtrering och formattering av text. Det fanns ju rätt mycket kod att både få inspiration och hjälp av i övningen och via ramverkets egen kod. Det var en del saker som var lite meckiga att få till men på det stora hela var det mest kul när jag lyckades formatera text på lite olika sätt.
+
+Jag började med att skapa en controllerklass till det jag kallade CMS delen av redovisasidan, dvs där jag la koden för att hantera webbsidorna och innehållet i databasen för denna övning. Jag började sedan med att skapa en egen klass för att hantera både sidor och blogposter. Jag funderade dock ett bra tag på vad jag egentligen skulle lägga i den klassen och började därför jobba vidare på mina routs i min CMSController. Under övningens gång så tyckte jag mig dock aldrig riktigt finna starka skäl till att utveckla den specifika klassen för content. 
+
+I mina routes för min content information har jag oftast fyra saker. Den första är ju själva kommunikationen mellan controller och resten av ramverket (t.ex. page->redirect etc), vilket känns ganska självklar att den delen måsta vara kvar i controllerklassen. Det andra är när jag hämtar och lägger in information från och till de variabler i ramverket som representerar de globala variablerna som t.ex. GET och POST, de känns ju inte heller som att de bör finnas i en friståend klass. Det tredje är sjävla kommunikationen med databasen, den kan jag tänka mig skulle kunna vara i en egen klass, men samktidigt har vi ju precis lärt oss hur smidigt det är att använda ramverkets inbygda modul för att kommunicera med databasen. Att skapa en helt egen klass för att bara hålla olika SQL satser kändes lite overkill. Den fjärde delen är ju mer logik och det kan jag se gör nytta i att vara i en egen klass. Dock blev det för denna uppgift knappt någon direkt logik som behövdes hanteras, den enda route som kanske blev lite stor och innehöll lite if-satser var edit routen. 
+
+På det stora hela kändes det därför onödigt att göra en egen klass i relation till hantering av content för denna uppgift. Dock kan jag se att det ger mer mening om jag hade haft ännu mer logik i min routes, t.ex. om jag haft tid att göra flera av extrauppgifterna.
+
+Min CMS controller tog därmed hand om det som behövde göras för att hantera databasen och visa informationen på redovisasidan. Efter routen cms/page/ kan man skriva in en path eller en slug för att visa sidor sparade i databasen. I och med att jag lät controllern letar efter både slug och path så kan man ha en sida som inte har en path, tolkade det som ett sätt att lösa kravet för felhantering av en sida med tom path. Efter routen cms/blog/ kan man skriva en path eller en slug för att visa blogposter. När jag sparar en sida eller en blogpost så kollar jag om den slug som sparas redan finns. Gör den det så skickar jag tillbaka ett meddelande till användaren att sidan eller blogposten sparades utan en slug eftersom den sluggen redan existerade i systemet. Inte helt optimalt men tolkar det som ett enkelt sätt att lösa felhantering för dubbletter av sluggar.
+
+Rent allmänt och under omständigheterna känner jag mig nöjd med koden jag skrivit till min redovisa sida. Dock är det ju oftast så (iallafall för mig) att när jag gör något för första gången så blir det ju långt ifrån optimalt, när jag väl är klar ser jag oftast flera saker som går att optimera och gör bättre. Rent generellt uppskattar jag att jag har lagt ca 50% mer tid än den uppskattade tiden det står att varje kursmoment skall ta. Så det största "hindret" att göra det bättre för min del är tidsbrist. Jag brukar gilla att göra extrauppgifterna i kurserna men denna gång har jag knappt haft tid att göra en enda extrauppgift. 
+
+Det som jag tycker är bra är att jag börjar förstå hur controllers fungerar i ramverket. Det som är mindre bra är att jag fortfarande inte riktigt förstår hur vanliga klasser kan integreras i ramverket på ett smidigt sätt, skulle jag få bättre koll på det skulle det nog vara lättare att bryta ut specifika klasser och göra controllers och routes i ramverket mindre och snyggare.
+
+Den största potential till refaktorering är nog just att bryta ut logik och lägga det i egna klasser, jag skall försöka sätta mig in i det och hoppas förstå hur det fungerar tills jag sätter igång med projektet. Det jag skulle behöva stöd av ramverket är nog mer exempel. Trots att jag försöker förstå dokumentationen på github så upplever jag oftast att den inte tar upp just det jag fastnar på. En annan stor förbättringspotential är felhanteringen, alla saker i övningen fungerar utmärkt när användaren gör rätt, men det går att ha sönder sidan om man verkligen vill. Jag lade dock lite extra energi på att försöka se till så att man inte kunde lägga in skadlig kod i databasen som sedan kördes när man visar sidor eller bloggposter.  
+
+Den TIL jag primärt tar med mig från denna gång är nog textfiltreringen. Jag har inte jobbat så mycket med regexp tidigare och det är alltid kul att lära sig nya saker att göra med det.    
